--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^14.2.15",
     "lucide-react": "^0.454.0",
     "next": "15.0.0",
     "react": "19.0.0-rc-65a56d0e-20241020",
