--- a/package.json
+++ b/package.json
@@ -10,18 +10,23 @@
   },
   "dependencies": {
     "@next/font": "^14.2.15",
+    "@prisma/client": "^5.22.0",
     "lucide-react": "^0.454.0",
     "next": "15.0.0",
     "react": "19.0.0-rc-65a56d0e-20241020",
-    "react-dom": "19.0.0-rc-65a56d0e-20241020"
+    "react-dom": "19.0.0-rc-65a56d0e-20241020",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/sqlite3": "^3.1.11",
     "eslint": "^8",
     "eslint-config-next": "15.0.0",
     "postcss": "^8",
+    "prisma": "^5.22.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.6.3"
   }
